--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             </nav>
         </div>
         <div class="hero-container">
-            
+            <div class="hero-secondary-container">
+                <span>This website is awesome</span>
+                <p>This website has some subtext that goes here under the main titile. It's a smaller font and trhe color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <img src="assets/img/img-teste.jpg" alt="">
         </div>
     </body>
 </html>
