--- a/index.html
+++ b/index.html
@@ -22,11 +22,41 @@
         </div>
         <div class="hero-container">
             <div class="hero-secondary-container">
-                <span>This website is awesome</span>
+                <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main titile. It's a smaller font and trhe color is lower contrast</p>
                 <button>Sign up</button>
             </div>
             <img src="assets/img/img-teste.jpg" alt="">
         </div>
+        <section class="info">
+            <h2>Some random information</h2>            
+                <div class="info-container">
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <span>this some subtext under an illustration or image</span>  
+                    </div>  
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <span id="info-text">this some subtext under an illustration or image</span>  
+                    </div>   
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <span>this some subtext under an illustration or image</span>  
+                    </div>   
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <span>this some subtext under an illustration or image</span>  
+                    </div>                                                      
+                </div>                
+        </section>
+        <section class="quote">
+            
+        </section>
+        <section class="call-to-action"> 
+
+        </section>
+        <footer>
+            <span>Copyright &copy The Odin Project 2021</span>
+        </footer>
     </body>
 </html>
