--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>  
                     <div class="info-box">
                         <div class="box"></div>
-                        <span id="info-text">this some subtext under an illustration or image</span>  
+                        <span>this some subtext under an illustration or image</span>  
                     </div>   
                     <div class="info-box">
                         <div class="box"></div>
@@ -50,7 +50,8 @@
                 </div>                
         </section>
         <section class="quote">
-            
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just fillng up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
+            <span>-Thor, God of Thunder</span>
         </section>
         <section class="call-to-action"> 
 
