--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
         <section class="quote">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just fillng up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
             <span>-Thor, God of Thunder</span>
-        </section>
-        <section class="call-to-action"> 
-
-        </section>
+        </section>        
+            <section class="call-to-action-box">        
+                <div class="call-to-action-info">   
+                    <h3>Call to action! it's time!</h3>   
+                    <div class="call-to-action-separation">
+                        <span>Sign up for our product by clicking that button right over here!</span>
+                        <button>Sign up</button>
+                    </div>                    
+                </div>                
+            </section>        
         <footer>
             <span>Copyright &copy The Odin Project 2021</span>
         </footer>
